--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "nuxt-app",
-  "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/i18n": "8.0.0-beta.13",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.16.19",
-    "@vite-pwa/nuxt": "^0.1.0",
-    "nuxt": "^3.6.2",
-    "nuxt-icon": "^0.4.2",
-    "nuxt-seo-kit": "^1.3.9",
+    "nuxt": "^3.6.3",
     "preline": "^1.9.0"
   }
 }
