--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,10 @@
-# Nuxt dev/build outputs
-.output
-.nuxt
-.nitro
-.cache
-dist
-
-# Node dependencies
-node_modules
-
-# Logs
-logs
-*.log
-
-# Misc
 .DS_Store
-.fleet
-.idea
-
-# Local env files
+node_modules
+/build
+/.svelte-kit
+/package
 .env
 .env.*
 !.env.example
-
-*.pem
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
