--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
 	"devDependencies": {
 		"@iconify-json/fe": "^1.1.6",
 		"@playwright/test": "^1.28.1",
+		"@storyblok/svelte": "^3.1.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"autoprefixer": "^10.4.14",
+		"blaze-slider": "^1.9.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -32,14 +35,13 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-cloudinary": "^1.0.3",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"unplugin-icons": "^0.16.5",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2",
-		"blaze-slider": "^1.9.3",
-		"svelte-cloudinary": "^1.0.3"
+		"vitest": "^0.32.2"
 	},
 	"type": "module"
 }
