--- a/package.json
+++ b/package.json
@@ -23,14 +23,23 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/d3-format": "^3.0.1",
+		"@types/d3-scale": "^4.0.3",
+		"@types/d3-shape": "^3.1.1",
+		"@types/d3-time-format": "^4.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"autoprefixer": "^10.4.14",
 		"blaze-slider": "^1.9.3",
+		"d3-format": "^3.1.0",
+		"d3-scale": "^4.0.2",
+		"d3-shape": "^3.2.0",
+		"d3-time-format": "^4.1.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"layercake": "^7.6.1",
 		"postcss": "^8.4.26",
 		"preline": "^1.9.0",
 		"prettier": "^2.8.0",
