--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"autoprefixer": "^10.4.14",
 		"blaze-slider": "^1.9.3",
+		"chart.js": "^4.3.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
