--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
+		"apexcharts": "^3.41.1",
 		"autoprefixer": "^10.4.14",
 		"blaze-slider": "^1.9.3",
-		"chart.js": "^4.3.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
