--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-sveltekit": "^0.10.1",
     "@supabase/supabase-js": "^2.31.0",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-cloudflare": "^2.3.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/gtag.js": "^0.0.13",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
