--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apexcharts": "^3.41.1",
     "autoprefixer": "^10.4.14",
     "blaze-slider": "^1.9.3",
+    "clsx": "^2.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
@@ -39,6 +40,7 @@
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "svelte-cloudinary": "^1.0.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
